--- a/routingPractice/package.json
+++ b/routingPractice/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^5.6.0-forward-compat.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
